Segfault entering Edit mode while Spreadsheet Open #101262

Closed
opened 2022-09-22 00:19:44 +02:00 by Jaggz H · 7 comments

version: 3.4.0 Alpha, branch: master (modified), commit date: 2022-09-20 21:44, hash: 7f284f5134, type: Debug
build date: 2022-09-21, 11:51:20
platform: 'Linux-5.10.0-16-amd64-x86_64-with-glibc2.31'
binary path: '/opt/src/blender-git/build_linux_debug/bin/blender'

This mesh was an empty Vert object. It uses a GN to copy another object's mesh.
Then it has a subsequent GN modifier intended for to displace its surface out a fixed amount.

Reproduce:

  1. Load attached
  2. Hit Tab to enter edit mode.

Does not reproduce:

  1. Load attached
    2a. Option A: Switch to view without Spreadsheet (I think)
    2b. Option B: Change spreadsheet view to something else
  2. Hit Tab to enter Edit mode
BLI_assert failed: source/blender/blenlib/BLI_virtual_array.hh:780, is_single(), at '*this'

Backtrace:

- 3  0x0000000000947a44 in blender::VArrayCommon<bool>::is_single (this=0x7fffffffcc50) at /home/jaggz/opt/src/blender-git/blender/source/blender/blenlib/BLI_virtual_array.hh:780
- 4  0x000000000f24d2d9 in blender::index_mask_ops::find_indices_from_virtual_array (indices_to_check=..., virtual_array=..., parallel_grain_size=2048, r_indices=...)
    at /home/jaggz/opt/src/blender-git/blender/source/blender/blenlib/intern/index_mask.cc:206
#5  0x000000000c8e418d in blender::ed::spreadsheet::GeometryDataSource::apply_selection_filter (this=0x7fffcf96a380, indices=...)
    at /home/jaggz/opt/src/blender-git/blender/source/blender/editors/space_spreadsheet/spreadsheet_data_source_geometry.cc:319
#6  0x000000000c90a29d in blender::ed::spreadsheet::spreadsheet_filter_rows (sspreadsheet=..., spreadsheet_layout=..., data_source=..., scope=...)
    at /home/jaggz/opt/src/blender-git/blender/source/blender/editors/space_spreadsheet/spreadsheet_row_filter.cc:356
#7  0x000000000c8d95e4 in spreadsheet_main_region_draw (C=0x7ffff3b79f88, region=0x7fffcf20df88)
    at /home/jaggz/opt/src/blender-git/blender/source/blender/editors/space_spreadsheet/space_spreadsheet.cc:417
- 8  0x0000000001a4e7c0 in ED_region_do_draw (C=0x7ffff3b79f88, region=0x7fffcf20df88) at /home/jaggz/opt/src/blender-git/blender/source/blender/editors/screen/area.c:545
- 9  0x00000000011638ba in wm_draw_window_offscreen (C=0x7ffff3b79f88, win=0x7fffcf19c688, stereo=false)
    at /home/jaggz/opt/src/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:944
- 10 0x0000000001163f0b in wm_draw_window (C=0x7ffff3b79f88, win=0x7fffcf19c688) at /home/jaggz/opt/src/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:1111
- 11 0x00000000011646ed in wm_draw_update (C=0x7ffff3b79f88) at /home/jaggz/opt/src/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:1371
- 12 0x000000000115ef1f in WM_main (C=0x7ffff3b79f88) at /home/jaggz/opt/src/blender-git/blender/source/blender/windowmanager/intern/wm.c:646
- 13 0x00000000007913b8 in main (argc=2, argv=0x7fffffffd628) at /home/jaggz/opt/src/blender-git/blender/source/creator/creator.c:575

trial-lens-frame-09-crash.blend

version: 3.4.0 Alpha, branch: master (modified), commit date: 2022-09-20 21:44, hash: 7f284f5134ca, type: Debug build date: 2022-09-21, 11:51:20 platform: 'Linux-5.10.0-16-amd64-x86_64-with-glibc2.31' binary path: '/opt/src/blender-git/build_linux_debug/bin/blender' This mesh was an empty Vert object. It uses a GN to copy another object's mesh. Then it has a subsequent GN modifier intended for to displace its surface out a fixed amount. Reproduce: 1. Load attached 2. Hit Tab to enter edit mode. Does not reproduce: 1. Load attached 2a. Option A: Switch to view without Spreadsheet (I think) 2b. Option B: Change spreadsheet view to something else 3. Hit Tab to enter Edit mode ``` BLI_assert failed: source/blender/blenlib/BLI_virtual_array.hh:780, is_single(), at '*this' ``` Backtrace: ``` - 3 0x0000000000947a44 in blender::VArrayCommon<bool>::is_single (this=0x7fffffffcc50) at /home/jaggz/opt/src/blender-git/blender/source/blender/blenlib/BLI_virtual_array.hh:780 - 4 0x000000000f24d2d9 in blender::index_mask_ops::find_indices_from_virtual_array (indices_to_check=..., virtual_array=..., parallel_grain_size=2048, r_indices=...) at /home/jaggz/opt/src/blender-git/blender/source/blender/blenlib/intern/index_mask.cc:206 #5 0x000000000c8e418d in blender::ed::spreadsheet::GeometryDataSource::apply_selection_filter (this=0x7fffcf96a380, indices=...) at /home/jaggz/opt/src/blender-git/blender/source/blender/editors/space_spreadsheet/spreadsheet_data_source_geometry.cc:319 #6 0x000000000c90a29d in blender::ed::spreadsheet::spreadsheet_filter_rows (sspreadsheet=..., spreadsheet_layout=..., data_source=..., scope=...) at /home/jaggz/opt/src/blender-git/blender/source/blender/editors/space_spreadsheet/spreadsheet_row_filter.cc:356 #7 0x000000000c8d95e4 in spreadsheet_main_region_draw (C=0x7ffff3b79f88, region=0x7fffcf20df88) at /home/jaggz/opt/src/blender-git/blender/source/blender/editors/space_spreadsheet/space_spreadsheet.cc:417 - 8 0x0000000001a4e7c0 in ED_region_do_draw (C=0x7ffff3b79f88, region=0x7fffcf20df88) at /home/jaggz/opt/src/blender-git/blender/source/blender/editors/screen/area.c:545 - 9 0x00000000011638ba in wm_draw_window_offscreen (C=0x7ffff3b79f88, win=0x7fffcf19c688, stereo=false) at /home/jaggz/opt/src/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:944 - 10 0x0000000001163f0b in wm_draw_window (C=0x7ffff3b79f88, win=0x7fffcf19c688) at /home/jaggz/opt/src/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:1111 - 11 0x00000000011646ed in wm_draw_update (C=0x7ffff3b79f88) at /home/jaggz/opt/src/blender-git/blender/source/blender/windowmanager/intern/wm_draw.c:1371 - 12 0x000000000115ef1f in WM_main (C=0x7ffff3b79f88) at /home/jaggz/opt/src/blender-git/blender/source/blender/windowmanager/intern/wm.c:646 - 13 0x00000000007913b8 in main (argc=2, argv=0x7fffffffd628) at /home/jaggz/opt/src/blender-git/blender/source/creator/creator.c:575 ``` [trial-lens-frame-09-crash.blend](https://archive.blender.org/developer/F13548304/trial-lens-frame-09-crash.blend)
Author

Added subscriber: @jaggz

Added subscriber: @jaggz
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey self-assigned this 2022-09-22 00:27:34 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report

Thanks for the report

This issue was referenced by e5af9a12d7

This issue was referenced by e5af9a12d7560d5ea279b78e6b7bb1f9fef8de5b

This issue was referenced by 20dc839319

This issue was referenced by 20dc8393192fcf5e5183816134436c1e871b852d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101262
No description provided.