Fix T101262: Crash in spreadsheet selection filter with empty domain

The BMesh selection virtual array was empty. There are a few different
places we could add an "empty" check here, but at the top of the
function is the simplest for now.